# chronicler

./: .env.example  .gitignore  CLAUDE.md  README.md  cleanup-5b.sh  findings.md  progress.md  pyproject.toml  task_plan.md  task_plan_post_mvp.md  verify-and-commit-5cd.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/docs/beautiful-mermaid/: cheat-sheet.md
.claude/docs/d3-force/: cheat-sheet.md
.claude/docs/d3-force-graph/: cheat-sheet.md
.claude/docs/memvid-sdk/: cheat-sheet.md
.claude/docs/obsidian-plugin/: cheat-sheet.md
.claude/docs/obsidian-rest-api/: cheat-sheet.md
.claude/docs/vscode-extension/: cheat-sheet.md
.claude/docs/vscode-extension-api/: cheat-sheet.md
.claude/docs/watchdog/: cheat-sheet.md
.github/workflows/: ci.yml
.orbit/: config.json
chronicler/: __init__.py  cli.py
chronicler/config/: __init__.py  loader.py  models.py
chronicler/converter/: __init__.py  converter.py
chronicler/drafter/: __init__.py  context.py  drafter.py  frontmatter.py  graph.py  models.py  prompts.py  sections.py
chronicler/llm/: __init__.py  base.py  claude.py  models.py  openai_adapter.py
chronicler/output/: __init__.py  validator.py  writer.py
chronicler/vcs/: __init__.py  base.py  crawler.py  github.py  models.py
commands/: configure.md  init.md  regenerate.md  status.md
docs/: CONVENTIONS.md  README.md  code-review-phase6-fixes.md  prd.md  spec.md
docs/plans/: 2026-01-23-cli-design.md  2026-01-23-config-design.md  2026-01-23-llm-interface-design.md  2026-01-23-monorepo-design.md  2026-01-23-prompt-design.md  2026-01-23-rate-limiting-design.md  2026-02-02-document-conversion-design.md  2026-02-02-memvid-integration-design.md  2026-02-02-product-architecture-design.md  2026-02-05-cartographer-merkle-design.md  2026-02-05-ide-integration-design.md  2026-02-05-obsidian-integration-design.md  haikuVSsonnet.md
docs/plans/hardening/: findings.md  manifest.md  progress.md
docs/plans/hardening/specs/: architecture-cleanup-spec.md  error-handling-spec.md  hook-safety-spec.md  security-hardening-spec.md  type-invariants-spec.md
docs/plans/specs/: findings.md  freshness-spec.md  hooks-skill-spec.md  llm-adapters-spec.md  manifest.md  obsidian-spec.md  packaging-spec.md  progress.md  vscode-spec.md
docs/plans/uat-specs/: e2e-functional-spec.md  error-paths-spec.md  findings.md  install-uat-spec.md  manifest.md  output-quality-spec.md  packaging-uat-spec.md  progress.md  root-spec.md  security-uat-spec.md  token-efficiency-spec.md
docs/shared/: adr_template.md  agent_guidelines.md  data_dictionary.md  implementation_plan.md
hooks/: hooks.json
scripts/: chronicler-hook.sh  chronicler-resolve-python.sh  chronicler-run.sh
skill/: chronicler.md
skills/chronicler/: SKILL.md
tests/: conftest.py  test_cli_merkle.py  test_cloud_queues.py  test_config.py  test_converter.py  test_drafter.py  test_error_handling.py  test_freshness.py  test_hooks_skill.py  test_interfaces.py  test_lite_cli.py  test_llm.py  test_llm_providers.py  test_memvid_storage.py  test_merkle_tree.py  test_neo4j_graph.py  test_obsidian.py  test_output.py  test_pipeline.py  test_plugin_loader.py  test_pr_engine.py  test_rbac.py  test_scanner.py  test_security.py  test_sqlite_queue.py  test_type_invariants.py  test_vcs.py
