[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicler"
version = "0.1.0"
description = "Living Technical Ledger - automated .tech.md generation for enterprise codebases"
requires-python = ">=3.11"
dependencies = [
    "chronicler-core",
    "chronicler-lite",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.21.0",
    "ruff",
]

[project.scripts]
chronicler = "chronicler.cli:app"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
chronicler-core = { workspace = true }
chronicler-lite = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
