[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicler"
version = "0.1.0"
description = "Living Technical Ledger - automated .tech.md generation for enterprise codebases"
requires-python = ">=3.11"
dependencies = [
    "chronicler-core",
    "chronicler-lite",
    "chronicler-obsidian",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.21.0",
    "ruff",
]

[project.scripts]
chronicler = "chronicler.cli:app"

[tool.uv.workspace]
members = [
    "packages/chronicler-core",
    "packages/chronicler-lite",
    "packages/chronicler-enterprise",
    "packages/chronicler-obsidian",
]

[tool.uv.sources]
chronicler-core = { workspace = true }
chronicler-lite = { workspace = true }
chronicler-enterprise = { workspace = true }
chronicler-obsidian = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
