[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicler"
version = "0.1.0"
description = "Living Technical Ledger - automated .tech.md generation for enterprise codebases"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "shihwesley"}]
keywords = ["documentation", "technical-docs", "llm", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "chronicler-core",
    "chronicler-lite",
    "chronicler-obsidian",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.21.0",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/shihwesley/chronicler"
Repository = "https://github.com/shihwesley/chronicler"
Issues = "https://github.com/shihwesley/chronicler/issues"

[project.scripts]
chronicler = "chronicler.cli:app"

[tool.uv.workspace]
members = [
    "packages/chronicler-core",
    "packages/chronicler-lite",
    "packages/chronicler-enterprise",
    "packages/chronicler-obsidian",
]

[tool.uv.sources]
chronicler-core = { workspace = true }
chronicler-lite = { workspace = true }
chronicler-enterprise = { workspace = true }
chronicler-obsidian = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
